--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>com.soebes.maven.extensions</groupId>
   <artifactId>deployment-recorder-extension</artifactId>
-  <version>0.1.0</version>
+  <version>0.1.1-SNAPSHOT</version>
   <name>Deployment Recorder Extension</name>
   <properties>
     <mavenVersion>3.1.1</mavenVersion>
@@ -26,7 +26,7 @@
     <developerConnection>scm:git:ssh://git@github.com/khmarbaise/deployment-recorder-extension.git</developerConnection>
     <connection>scm:git:https://github.com/khmarbaise/deployment-recorder-extension.git</connection>
     <url>https://github.com/khmarbaise/deployment-recorder-extension/</url>
-    <tag>deployment-recorder-extension-0.1.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <distributionManagement>
     <site>
