--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.soebes.smpp</groupId>
@@ -47,12 +49,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-component-annotations</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
-      <!--
-        ! Overwrite the scope from parent, cause
-        ! we use LifeCyclePhases from this package. 
-       -->
       <scope>compile</scope>
       <exclusions>
         <exclusion>
@@ -87,6 +89,17 @@
       <artifactId>aether-api</artifactId>
       <version>1.0.0.v20140518</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+    <groupId>org.codehaus.plexus</groupId>
+    <artifactId>plexus-container-default</artifactId>
+    <version>1.7.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.sisu</groupId>
+      <artifactId>org.eclipse.sisu.plexus</artifactId>
+      <version>0.3.3</version>
     </dependency>
   </dependencies>
   <reporting>
@@ -123,10 +136,24 @@
             <id>generate-index</id>
             <goals>
               <goal>main-index</goal>
+              <goal>index</goal>
             </goals>
           </execution>
         </executions>
       </plugin>
+
+<!--       <plugin> -->
+<!--         <groupId>org.codehaus.plexus</groupId> -->
+<!--         <artifactId>plexus-component-metadata</artifactId> -->
+<!--         <version>1.7.1</version> -->
+<!--         <executions> -->
+<!--           <execution> -->
+<!--             <goals> -->
+<!--               <goal>generate-metadata</goal> -->
+<!--             </goals> -->
+<!--           </execution> -->
+<!--         </executions> -->
+<!--       </plugin> -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>templating-maven-plugin</artifactId>
@@ -134,26 +161,6 @@
           <execution>
             <goals>
               <goal>filter-sources</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <!--
-        ! Create extension for Maven version less than 3.3.1
-        ! works for Maven 3.1.1 till 3.2.5
-      -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <configuration>
-          <shadedArtifactAttached>true</shadedArtifactAttached>
-          <shadedClassifierName>mvn311</shadedClassifierName>
-          <createDependencyReducedPom>false</createDependencyReducedPom>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>shade</goal>
             </goals>
           </execution>
         </executions>
@@ -189,6 +196,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-invoker-plugin</artifactId>
             <configuration>
+              <streamLogs>true</streamLogs>
               <addTestClassPath>true</addTestClassPath>
               <debug>false</debug>
               <localRepositoryPath>${localRepositoryPath}</localRepositoryPath>
