Added maven-compiler-plugin for IT setup

--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,7 @@
                   <extraArtifacts>
                     <extraArtifact>org.apache.maven.plugins:maven-install-plugin:2.5.2:maven-plugin</extraArtifact>
                     <extraArtifact>org.apache.maven.plugins:maven-clean-plugin:3.0.0:maven-plugin</extraArtifact>
+                    <extraArtifact>org.apache.maven.plugins:maven-compiler-plugin:3.3:maven-plugin</extraArtifact>
                     <extraArtifact>org.apache.maven.plugins:maven-jar-plugin:2.6:maven-plugin</extraArtifact>
                     <extraArtifact>org.apache.maven.plugins:maven-surefire-plugin:2.18.1:maven-plugin</extraArtifact>
                     <extraArtifact>org.apache.maven.surefire:surefire-testng:2.18.1:jar</extraArtifact>
